# visionauto

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: _config.py  popup_watcher.py  search_download.py  wechat_search.py
tests/: conftest.py  test_core_prompts.py  test_provider_vision.py
visionauto/: __init__.py  cache.py  config.py  coords.py  debug.py  device.py  exceptions.py  located.py  prompts.py  selector.py  utils.py  viz.py
visionauto/locator/: __init__.py  base.py  description.py  image.py  text.py
visionauto/matching/: __init__.py  opencv.py
visionauto/providers/: __init__.py  base.py  glm.py  openai.py  qwen.py
